--- a/Ketch/Base.lproj/Main.storyboard
+++ b/Ketch/Base.lproj/Main.storyboard
@@ -33,6 +33,16 @@
             </objects>
             <point key="canvasLocation" x="676" y="218"/>
         </scene>
+        <!--New Connection View Controller-->
+        <scene sceneID="Lfd-Nm-nb7">
+            <objects>
+                <viewController storyboardIdentifier="NewConnection" id="yMw-7P-Sbk" customClass="NewConnectionViewController" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hvP-mk-Fcq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1110" y="304"/>
+        </scene>
         <!--Root View Controller-->
         <scene sceneID="d4d-05-BTY">
             <objects>
@@ -67,6 +77,9 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <segue destination="yMw-7P-Sbk" kind="show" identifier="GameToNewConnection" id="Zph-Ug-ak8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TlQ-8h-TWe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -82,7 +95,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <segue destination="rRd-ZO-60U" kind="show" identifier="ConnectionsToChat" id="2kk-V8-7uA"/>
+                        <segue destination="rRd-ZO-60U" kind="show" identifier="DockToChat" id="2kk-V8-7uA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y2Q-Pb-RU0" userLabel="First Responder" sceneMemberID="firstResponder"/>
