--- a/Ketch/User Interface/Signup/SignupView.xib
+++ b/Ketch/User Interface/Signup/SignupView.xib
@@ -3,6 +3,16 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="TransatTextBlack.otf">
+            <string>TransatTextBlack</string>
+        </mutableArray>
+        <mutableArray key="TransatTextStandard.otf">
+            <string>TransatTextStandard</string>
+            <string>TransatTextStandard</string>
+            <string>TransatTextStandard</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignupViewController">
             <connections>
@@ -11,41 +21,73 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TEMP-Get-Started" translatesAutoresizingMaskIntoConstraints="NO" id="EWx-rs-MkE">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="signup-ketch-logo" translatesAutoresizingMaskIntoConstraints="NO" id="EWx-rs-MkE">
+                    <rect key="frame" x="126" y="145" width="122" height="156"/>
                 </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="awQ-vi-2op">
+                    <rect key="frame" x="89" y="336" width="195" height="38"/>
+                    <string key="text">Thats how easy it is to
+find the one with Ketch.</string>
+                    <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="19"/>
+                    <color key="textColor" red="0.050980392156862744" green="0.39215686274509803" blue="0.53725490196078429" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signup now to play." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jU-As-B9B">
+                    <rect key="frame" x="106" y="382" width="160" height="19"/>
+                    <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="19"/>
+                    <color key="textColor" red="0.050980392159999999" green="0.3921568627" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SdM-8k-H6p">
-                    <rect key="frame" x="35" y="367" width="250" height="119"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <rect key="frame" x="61" y="425" width="250" height="55"/>
+                    <color key="backgroundColor" red="0.23137254901960785" green="0.34901960784313724" blue="0.59607843137254901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="119" id="eLA-Pd-L4X"/>
-                        <constraint firstAttribute="width" constant="250" id="xa8-P5-O5S"/>
+                        <constraint firstAttribute="width" constant="250" id="SSN-ig-Qsc"/>
+                        <constraint firstAttribute="height" constant="55" id="nLs-gP-366"/>
                     </constraints>
-                    <state key="normal">
+                    <fontDescription key="fontDescription" name="TransatTextBlack" family="Transat Text" pointSize="20"/>
+                    <inset key="titleEdgeInsets" minX="0.0" minY="5" maxX="0.0" maxY="0.0"/>
+                    <state key="normal" title="Log in with Facebook">
+                        <color key="titleColor" red="0.94117647058823528" green="0.98039215686274506" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="7"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="login:" destination="-1" eventType="touchUpInside" id="eH7-zq-3UR"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4AJ-Q8-LAW">
+                    <rect key="frame" x="91" y="492" width="191.5" height="28"/>
+                    <string key="text">We never post anything, 
+you got nothing to worry about.</string>
+                    <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="14"/>
+                    <color key="textColor" red="0.050980392159999999" green="0.3921568627" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.94117647058823528" green="0.98039215686274506" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="EWx-rs-MkE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5eA-w5-0cH"/>
-                <constraint firstItem="EWx-rs-MkE" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="9kA-0u-z9w"/>
-                <constraint firstAttribute="bottom" secondItem="SdM-8k-H6p" secondAttribute="bottom" constant="82" id="Fnb-uH-k4c"/>
-                <constraint firstAttribute="trailing" secondItem="EWx-rs-MkE" secondAttribute="trailing" id="V54-68-OH6"/>
-                <constraint firstAttribute="bottom" secondItem="EWx-rs-MkE" secondAttribute="bottom" id="arZ-q7-YYq"/>
-                <constraint firstAttribute="centerX" secondItem="SdM-8k-H6p" secondAttribute="centerX" id="gsc-u6-wIi"/>
+                <constraint firstItem="4AJ-Q8-LAW" firstAttribute="top" secondItem="SdM-8k-H6p" secondAttribute="bottom" constant="12" id="6mL-8t-RvF"/>
+                <constraint firstItem="4AJ-Q8-LAW" firstAttribute="centerX" secondItem="SdM-8k-H6p" secondAttribute="centerX" id="8HU-oF-OJ8"/>
+                <constraint firstItem="SdM-8k-H6p" firstAttribute="top" secondItem="3jU-As-B9B" secondAttribute="bottom" constant="24" id="CV2-8Z-TT7"/>
+                <constraint firstItem="awQ-vi-2op" firstAttribute="top" secondItem="EWx-rs-MkE" secondAttribute="bottom" constant="35" id="MnG-yS-zzv"/>
+                <constraint firstAttribute="centerX" secondItem="EWx-rs-MkE" secondAttribute="centerX" id="Ncq-cB-Y8U"/>
+                <constraint firstItem="3jU-As-B9B" firstAttribute="centerX" secondItem="SdM-8k-H6p" secondAttribute="centerX" id="ceQ-xu-LZB"/>
+                <constraint firstItem="3jU-As-B9B" firstAttribute="top" secondItem="awQ-vi-2op" secondAttribute="bottom" constant="8" id="dxi-hj-YKF"/>
+                <constraint firstItem="awQ-vi-2op" firstAttribute="centerX" secondItem="EWx-rs-MkE" secondAttribute="centerX" id="fjX-XL-79n"/>
+                <constraint firstAttribute="centerY" secondItem="EWx-rs-MkE" secondAttribute="centerY" constant="110" id="g6z-sF-imX"/>
+                <constraint firstItem="3jU-As-B9B" firstAttribute="centerX" secondItem="awQ-vi-2op" secondAttribute="centerX" id="wPw-LT-bWa"/>
             </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <point key="canvasLocation" x="261" y="410"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+            <point key="canvasLocation" x="260.5" y="409.5"/>
         </view>
     </objects>
     <resources>
-        <image name="TEMP-Get-Started" width="640" height="1136"/>
+        <image name="signup-ketch-logo" width="122" height="156"/>
     </resources>
 </document>
