Define runtime attribute layer.cornerRadius to be Number instead of string. Using these really help keep view controllers clean

--- a/Ketch/User Interface/Signup/SignupView.xib
+++ b/Ketch/User Interface/Signup/SignupView.xib
@@ -55,7 +55,9 @@ find the one with Ketch.</string>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="7"/>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="7"/>
+                        </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="login:" destination="-1" eventType="touchUpInside" id="eH7-zq-3UR"/>
